--- a/public/loadingFrame.html
+++ b/public/loadingFrame.html
@@ -3,16 +3,22 @@
 
 <head>
   <style>
+    html {
+      width: 100%;
+      height: 100%;
+    }
+
     body {
+      width: 100%;
+      height: 100%;
       margin: 0;
     }
 
     canvas {
       width: 100%;
-      height: 100%
+      height: 100%;
     }
   </style>
-  <script src="/scripts/snippet-javascript-console.min.js?v=1"></script>
 </head>
 
 <body>
@@ -44,16 +50,21 @@
     THREE.IcosahedronGeometry.prototype = Object.create(THREE.PolyhedronGeometry.prototype);
     THREE.IcosahedronGeometry.prototype.constructor = THREE.IcosahedronGeometry;
 
+    var params = location.href.split('?')[1].split('&');
+    var data = {};
+    for (x in params) {
+      data[params[x].split("=")[0]] = params[x].split("=")[1];
+    }
     // Scene
     var scene = new THREE.Scene();
-    var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    var camera = new THREE.PerspectiveCamera(75, data.width / data.height, 0.1, 1000);
 
     var renderer = new THREE.WebGLRenderer({
       antialias: 1
     });
 
     renderer.setClearColor(0xf7f7f7);
-    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setSize(data.width, data.height);
     document.body.appendChild(renderer.domElement);
 
     scene.fog = new THREE.Fog(0xd4d4d4, 8, 20);
