--- a/public/loadingFrame.html
+++ b/public/loadingFrame.html
@@ -6,17 +6,20 @@
     html {
       width: 100%;
       height: 100%;
+      overflow: hidden;
     }
 
     body {
       width: 100%;
       height: 100%;
       margin: 0;
+      overflow: hidden;
     }
 
     canvas {
       width: 100%;
       height: 100%;
+      overflow: hidden;
     }
   </style>
 </head>
@@ -70,7 +73,7 @@
     scene.fog = new THREE.Fog(0xd4d4d4, 8, 20);
 
     // Create vertex points
-    var mesh = new THREE.IcosahedronGeometry(10, 1); // radius, detail
+    var mesh = new THREE.IcosahedronGeometry(10, 2); // radius, detail
     var vertices = mesh.vertices;
     var positions = new Float32Array(vertices.length * 3);
     for (var i = 0, l = vertices.length; i < l; i++) {
@@ -81,7 +84,7 @@
     geometry.addAttribute('position', new THREE.BufferAttribute(positions, 3));
 
     var material = new THREE.PointsMaterial({
-      size: 0.4,
+      size: 0.3,
       vertexColors: THREE.VertexColors,
       color: 0x252525
     });
